# deepseek-quickstart

./: .gitignore  pyproject.toml
homework/chapter04/hw04_1/: deepseek_api.ipynb  gomoku.html
homework/chapter04/hw04_2/: rag_milvus_deepseek_1.ipynb  rag_milvus_deepseek_2.ipynb
homework/chapter05/hw05_1/: rednote_1.ipynb  rednote_2.ipynb
homework/chapter06/hw06_1/: 1.md  2.ipynb  products.json
homework/hw07/: 1.md  2.md  docker_cmd.md  docker_compse_cmd.md
homework/hw08/: README.md
homework/hw09/: README.md  菜谱.md
homework/hw10/: README.md
homework/hw10/codes/: deepseek.html  snake.html
homework/hw11/: README.md
homework/hw12/: README.md
homework/hw12/mcp/: nws.py
homework/hw15/: README.md  公司手册-v2.md
homework/hw15/fastgpt/: docker-compose.yml
homework/hw16/: README.md
homework/hw16/docs/: 公司手册-v2.md
homework/hw16/scripts/: markdown_to_email_format.js
homework/hw17/: README.md  rbac.py
homework/hw23/: README.md
