[project]
name = "deepseek-quickstart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.10.5",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "model2vec>=0.6.0",
    "openai==1.82.0",
    "pymilvus[model]==2.5.10",
    "requests==2.32.3",
    "torch==2.7.0",
    "tqdm==4.67.1",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
